# IndexMind

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.py  build-docker.bat  pyproject.toml  requirements.txt  run.bat  run.sh  start-docker.sh
