[project]
name = "application-of-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.4",
    "hf-xet>=1.2.0",
    "langchain>=1.0.3",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "python-multipart>=0.0.20",
    "ruff>=0.14.3",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
    "unstructured[all-docs]>=0.18.15",
    "uvicorn>=0.38.0",
]
